[gd_scene load_steps=5 format=3 uid="uid://xdf68nvre6nm"]

[ext_resource type="Theme" uid="uid://c2dqbtyc2vdb7" path="res://main_theme.tres" id="1_5dbdl"]
[ext_resource type="Script" path="res://encounter_view.gd" id="2_5l66p"]
[ext_resource type="PackedScene" uid="uid://bhp206jav1nqd" path="res://inner_window.tscn" id="3_1ekb3"]
[ext_resource type="PackedScene" uid="uid://clwihkhkn1031" path="res://sortable_list.tscn" id="4_w2ftk"]

[node name="EncounterView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_5dbdl")
script = ExtResource("2_5l66p")

[node name="ReferenceRect" type="ReferenceRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -34.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
text = "Start Encounter"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 6.0
offset_right = -4.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2

[node name="InnerWindow" parent="VBoxContainer" instance=ExtResource("3_1ekb3")]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/InnerWindow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Body" type="VBoxContainer" parent="VBoxContainer/InnerWindow/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="RichTextLabel" parent="VBoxContainer/InnerWindow/ScrollContainer/Body"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_5dbdl")
text = "Encounter Name"

[node name="SortableList" parent="VBoxContainer" instance=ExtResource("4_w2ftk")]
layout_mode = 2

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
